--- a/source/Main.html
+++ b/source/Main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/static/main.css">
 </head>
     <body>
     <div class="form_wrapper">
